deployment/base/umami/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: umami
  namespace: analytics
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`analytics.kjg-buedesheim.de`)
      kind: Rule
      services:
        - name: umami
          port: 3000
  tls:
    certResolver: myresolver
